WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118259
AX: Items the img aria role aren't inserting an object replacement character
https://bugs.webkit.org/show_bug.cgi?id=118259
Summary
AX: Items the img aria role aren't inserting an object replacement character
chris fleizach
Reported
2013-07-01 11:47:00 PDT
The object replacement character is not being emitted when encountering an element with <div role="img"> However, native images do get an emission
Attachments
patch
(7.80 KB, patch)
2013-07-01 14:22 PDT
,
chris fleizach
thorton
: review+
Details
Formatted Diff
Diff
patch for landing
(7.56 KB, patch)
2013-07-03 17:53 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2013-07-01 14:22:06 PDT
Created
attachment 205835
[details]
patch
Tim Horton
Comment 2
2013-07-01 23:33:51 PDT
Comment on
attachment 205835
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=205835&action=review
patch doesn't apply.
> Source/WebCore/ChangeLog:3 > + AX: Items the img aria role aren't inserting an object replacement character
This title is missing some words (or has some extras?).
> LayoutTests/platform/mac/accessibility/aria-image-emits-object-replacement.html~:1 > +<!DOCTYPE HTML>
please don't commit this extraneous html~ file :D
chris fleizach
Comment 3
2013-07-03 17:53:06 PDT
Created
attachment 206039
[details]
patch for landing
chris fleizach
Comment 4
2013-07-03 22:29:09 PDT
http://trac.webkit.org/changeset/152388
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug